feat: edit favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Gsap Slider</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="favicon1.jpeg" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://i.ibb.co/HPFd8j2/favicon1.jpg" type="image/jpg">
   </head>
   <body>
     <div v class="gallery">
